# INFOH503

./: .gitignore  CMakeLists.txt  External-CImage.cmake  README.md  update_kernels.cmake
kernels/: cost_layer_integrated_grayscale.cl  cost_volume.cl  cost_volume_by_layer.cl  densification.cl  derivative.cl  differenceImage.cl  disparity_selection.cl  greyscale.cl  guidedFilter.cl  guidedFilterEnd.cl  guidedFilterStart.cl  left_right_consistency.cl  matrix_term_mult.cl  mean_filter.cl  median_filter.cl  padding.cl  scan.cl  scan_integration.cl  threshold.cl  transpose.cl
resources/: README.md
src/: benchmark_integral_image.cpp  benchmark_integral_image.hpp  integral_image.cpp  integral_image.h  main.cpp  main.cu  ocl_wrapper.cpp  ocl_wrapper.h  platforms.c  tools.cpp  tools.h
